fix width on mobile

--- a/sass/vacancy.scss
+++ b/sass/vacancy.scss
@@ -245,6 +245,10 @@
 	.vacanciesHead {
 		display: none;
 	}
+	.vacancyDisc {
+		width: 94%;
+		margin: 15px 3%;
+	}
 }
 @media only screen and (max-width: 1025px) {
 	.main {
